Update brand information

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <header id="header">
       <img src="logo.jpg">
-      <h1> Chat widget DevChat Tentant
+      <h1> Chat widget Dev Chat tentant
       </h1>
       
                 
