--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <!-- Page setup -->
     <meta charset="utf-8">
-    <title>Chat widget DevChat</title>
+    <title>Dev chat widget</title>
     <meta name="description" content="A website to test chat widget">
     <meta name="author" content="Information about the author here">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>
