Update widget Id (Agent portal widget)

--- a/index.html
+++ b/index.html
@@ -51,6 +51,5 @@
     
     <!-- Load additional JS scripts here -->
     <script type="text/javascript" src="script.js"></script>
-  <script src="https://dev-chat-integration.bolddesk.com/chatwidget-api/widget/v1/5f0dedc9-d959-4815-b0da-f9b69f0e8465" defer async></script>
-  </body>
+<script src="https://dev-chatintegrationtesting.testing.com/chatwidget-api/widget/v1/83195180-26a2-4b1d-a141-55078c8a008a" defer async></script>  </body>
 </html>
